# rpc

./: CMakeLists.txt  api.h  client.cpp  client_network.cpp  main.cpp  server.cpp  server.h  server_api.h  server_network.cpp  shared_type.h
client/: client_network.cpp
common/: api.h  rpc_enum.h  rpc_info.inc  rpc_serialized.h  shared_type.h
server/: a.cpp  b.cpp  rpc_api.cpp  rpc_api.h  rpc_framework.cpp  rpc_framework.h  server_api.h  server_network.cpp
