#cmake_minimum_required(VERSION 3.28)
project(main)

set(CMAKE_CXX_STANDARD 20)
find_package(Boost REQUIRED COMPONENTS system)
FILE(GLOB RPC_FILE server/*.cpp client/*.cpp)
add_library(rpclib ${RPC_FILE})

add_executable(server server.cpp)
add_executable(client client.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

target_include_directories(rpclib PRIVATE ${Boost_INCLUDE_DIRS})
target_include_directories(client PRIVATE ${Boost_INCLUDE_DIRS})
target_include_directories(server PRIVATE ${Boost_INCLUDE_DIRS})
if(WIN32)
    set(extra_lib wsock32 ws2_32)
else ()
    set(extra_lib "")
endif ()
target_link_libraries(rpclib ${Boost_LIBRARIES} ${extra_lib})
target_link_libraries(server rpclib  ${extra_lib})
target_link_libraries(client rpclib  ${extra_lib})
